# Babdongmu

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Caddyfile  DATABASE.md  DESIGN.md  FEATURES.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_phone_verifications.py  003_add_fixed_status_and_hosting_updated_at.py
app/: config.py  database.py  main.py  scheduler.py
app/api/v1/: router.py
app/core/: security.py
app/domain/: __init__.py
app/domain/admin/: router.py
app/domain/ai/: router.py  schema.py
app/domain/common/: models.py  schemas.py
app/domain/hosting/: models.py  router.py  schema.py  schemas.py  service.py
app/domain/match/: models.py  router.py  schema.py  schemas.py  service.py
app/domain/review/: models.py  router.py  schema.py  schemas.py  service.py
app/domain/senior/: models.py  router copy.py  router.py  schema.py  (+2 more)
app/services/: ai.py  qr.py  r2.py  sms.py
docs/: DATABASE.md  FEATURES.md  bab_donmu_erd.html
frontend/: index.html
frontend/base/: footer.html
frontend/css/: common.css
frontend/js/: addressMapper.js  admin.js  api.js  authGuard.js  base.js  footer.js  format-utils.js  hosting-shared.js  login.js  modal.js  mypage.js  register.js
frontend/pages/: admin.html  check.html  guardian.html  hosting-detail.html  hosting-match.html  hostings.html  login.html  my-matches.html  mypage.html  register.html  review-detail.html  stats.html
presentation/: babdongmu-demo.html
scripts/: create_admin.py  duckdns-update.sh
tests/: conftest.py  test_phone_normalize.py  test_user.py
(+8 files in other folders)
