[project]
name = "babdongmu"
version = "0.1.0"
description = "독거 어르신을 위한 식사 동반 플랫폼"
requires-python = ">=3.12,<3.14"

dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "pydantic-settings==2.8.1",
    "pydantic[email]==2.12.5",
    "python-dotenv==1.1.0",
    "sqlalchemy[asyncio]==2.0.40",
    "aiosqlite==0.20.0",
    "psycopg[binary]==3.3.3",
    "alembic==1.14.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "PyJWT==2.12.1",
    "httpx==0.28.1",
    "google-genai==1.16.1",
    "solapi==5.0.3",
    "boto3==1.37.37",
    "python-multipart==0.0.20",
    "qrcode[pil]==8.1",
]

[dependency-groups]
dev = [
    "ruff==0.11.4",
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
